# version_bumper

./: .cruft.json  .gitignore  .pre-commit-config.yaml  DEV-README.md  README.md  Taskfile.yaml  mkdocs.yml  poetry.lock.license  pyproject.toml  tox.ini
docs/: DEV-README.md  index.md
scripts/: bump_version.sh  gen_ref_pages.py  swap_build_system.py
src/version_bumper/: __init__.py  __main__.py  commands.py  pyproject.py  version.py
src/version_bumper/clibones/: __init__.py  application_settings.py  config_file.py  config_file_base.py  graceful_interrupt_handler.py  info_control.py  json_config_file.py  logger_control.py  toml_config_file.py
taskfiles/: hatch-vars.yaml  hatch.yaml  poetry-vars.yaml  poetry.yaml  setuptools-vars.yaml  setuptools.yaml
tests/: config_1.toml  config_2.toml  config_3.toml  config_4.toml  good_pyproject.toml  test_app_version.py  test_commands.py  test_config_file.py  test_info_control.py  test_main.py  test_pyproject.py  test_version.py
